criado projeto simplicidade e baby steps - capitulo 4

--- a/4-simplicade-e-baby-steps/simplicade-e-baby-steps.csproj
+++ b/4-simplicade-e-baby-steps/simplicade-e-baby-steps.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>testes_de_unidade</RootNamespace>
+    <RootNamespace>simplicade_e_baby_steps</RootNamespace>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
